fixed cropper

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -40,7 +40,7 @@
   }
 
   .container[role="main"]{
-    margin: 0 auto 2em;
+    margin: 0 auto;
     min-height: 100vh;
     width: $cols3;
   }
